# trino-odbc

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HOW_TO_RELEASE.md  README.md  vcpkg-configuration.json  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: make_release.yml  pull-request-code-scan.yml
install/: .gitignore  LICENSE.rtf  RegisterTrinoODBC.reg  TrinoODBC_x64.wxs  TrinoODBC_x86.wxs  build_x64_installer.ps1  build_x86_installer.ps1  third_party_licenses.txt
src/driver/: allocHandle.cpp  bindCol.cpp  bindParameter.cpp  cancel.cpp  cancelHandle.cpp  closeCursor.cpp  colAttribute.cpp  columns.cpp  connect.cpp  copyDesc.cpp  dataSources.cpp  describeCol.cpp  disconnect.cpp  driverConnect.cpp  drivers.cpp  endTran.cpp  execDirect.cpp  execute.cpp  extendedFetch.cpp  fetch.cpp  fetchScroll.cpp  freeHandle.cpp  freeStmt.cpp  getConnectAttr.cpp  getCursorName.cpp  getData.cpp  getDescField.cpp  getDescRec.cpp  getDiagRec.cpp  getEnvAttr.cpp  getFunctions.cpp  getInfo.cpp  getStmtAttr.cpp  getTypeInfo.cpp  moreResults.cpp  nativeSql.cpp  numParams.cpp  numResultCols.cpp  paramData.cpp  prepare.cpp  (+10 more)
src/driver/config/: configDSN.cpp  driverConfig.cpp  driverConfig.hpp  dsnConfigForm.cpp  dsnConfigForm.hpp  profileReader.cpp  profileReader.hpp
src/driver/config/win32controls/: buttonMaker.cpp  buttonMaker.hpp  comboboxMaker.cpp  comboboxMaker.hpp  editMaker.cpp  editMaker.hpp  labelMaker.cpp  labelMaker.hpp
src/driver/constants/: statementAttrs.hpp
src/driver/handles/: connHandle.cpp  connHandle.hpp  descriptorHandle.cpp  descriptorHandle.hpp  envHandle.cpp  envHandle.hpp  handleErrorInfo.cpp  handleErrorInfo.hpp  statementHandle.cpp  statementHandle.hpp
src/driver/mappings/: typeMappings.cpp  typeMappings.hpp
src/trinoAPIWrapper/: apiAuthMethod.hpp  columnDescription.cpp  columnDescription.hpp  connectionConfig.cpp  connectionConfig.hpp  environmentConfig.cpp  environmentConfig.hpp  trinoExceptions.cpp  trinoExceptions.hpp  trinoQuery.cpp  trinoQuery.hpp
src/trinoAPIWrapper/authProvider/: authConfig.hpp  clientCredAuthProvider.cpp  clientCredAuthProvider.hpp  externalAuthProvider.cpp  externalAuthProvider.hpp  noAuthProvider.cpp  noAuthProvider.hpp  tokenCacheAuthProviderBase.cpp  tokenCacheAuthProviderBase.hpp
src/trinoAPIWrapper/authProvider/tokens/: tokenCache.cpp  tokenCache.hpp  tokenParser.cpp  tokenParser.hpp
src/util/: b64decoder.cpp  b64decoder.hpp  browserInteraction.cpp  browserInteraction.hpp  callbackHelper.hpp  capitalize.cpp  capitalize.hpp  cryptUtils.cpp  cryptUtils.hpp  dateAndTimeUtils.cpp  dateAndTimeUtils.hpp  decimalHelper.cpp  decimalHelper.hpp  delimKvpHelper.cpp  delimKvpHelper.hpp  rowToBuffer.cpp  rowToBuffer.hpp  stringFromChar.cpp  stringFromChar.hpp  stringSplitAndTrim.cpp  stringSplitAndTrim.hpp  stringTrim.cpp  stringTrim.hpp  timeUtils.cpp  timeUtils.hpp  timer.cpp  timer.hpp  valuePtrHelper.hpp  windowsLean.hpp  writeLog.cpp  writeLog.hpp
test/: constants.cpp  constants.hpp  gtestTest.cpp
test/connections/: connectTest.cpp
test/fixtures/: sqlDriverConnectFixture.cpp  sqlDriverConnectFixture.hpp
test/functions/: testCancel.cpp  testColumns.cpp  testDescribeCol.cpp  testGetConnectAttr.cpp  testGetInfo.cpp  testTables.cpp
test/memory/: memoryReclamationTest.cpp
test/performance/: bindFetchPerformanceTest.cpp  fetchRowPerformanceTest.cpp  getDataFetchPerformanceTest.cpp
test/types/: fetchBindTest.cpp  fetchGetdataTest.cpp
test/unit/util/: base64decoderTest.cpp  cryptUtilsTest.cpp  dateAndTimeUtilsTest.cpp  stringTrimTest.cpp  valuePtrHelperTest.cpp
